@@ -129,6 +129,8 @@ Avro 1.4.0 (unreleased)
 
   BUG FIXES
 
+    AVRO-618. Avro doesn't work with python 2.4 (philz)
+
     AVRO-502. Memory leak from parsing JSON schema.
     (Robert G. Jakabosky via massie)
 
